Release v1.1.0 : new simple card block + fixed displaying issues on mobile devices

--- a/assets/styles/sass/components/_cards.scss
+++ b/assets/styles/sass/components/_cards.scss
@@ -99,7 +99,7 @@
 }
 
 .card-processus {
-  font-size: .88rem;
+  // font-size: .88rem;
   display: block;
 
   .card-header {
@@ -216,4 +216,9 @@
   .section-content {
     padding: 0;
   }
+}
+
+.card-simple {
+  text-align: center;
+  border: none;
 }
